@@ -26,6 +26,7 @@
 	all : optimized macro engine (speed x2)
 	all : added -D macrotimes support
 	all : added untyped __this__ support (prepare for 'this' spec. change)
+	flash9 : store resources in bytes tag instead of bytecode
 
 2011-01-30: 2.07
 	all : fixed completion support with --remap
